Update Localization for user pages

--- a/PatientAnalytics/Blazor/Pages/Admin/UserManagement/UserManagement.razor
+++ b/PatientAnalytics/Blazor/Pages/Admin/UserManagement/UserManagement.razor
@@ -34,7 +34,7 @@
             </div>
         </section>
 
-        <PersonDetailsDisplay Title="@Localized["Title_PatientDashboard"]" Person="_user" />
+        <PersonDetailsDisplay Title="@Localized["Title_UserDashboard"]" Person="_user" />
         
         <UserEditAccountInfoModal
             IsModalOpen="@_userEditModalRevealed"
