ConfirmationModal updated props usage and BlazorAlertController implementation to all componenets that use ConfirmationModal

--- a/PatientAnalytics/Blazor/Pages/Admin/UserManagement/UserManagement.razor
+++ b/PatientAnalytics/Blazor/Pages/Admin/UserManagement/UserManagement.razor
@@ -44,16 +44,7 @@
         />
     }
     
-    @if (_alertController.IsVisible)
-    {
-        <ConfirmationModal
-            Title="@_alertController.Alert!.Title"
-            ConfirmButtonText="@_alertController.Alert.ConfirmButtonText"
-            CancelButtonText="@_alertController.Alert.CancelButtonText"
-            OnConfirm="@_alertController.Alert.OnConfirm"
-            OnCancel="@_alertController.Alert.OnCancel"
-            IsVisible="true" />
-    }
+    <ConfirmationModal Alert="_alertController.Alert" />
 </AdminDashboardWrapper>
 
 
