--- a/PatientAnalytics/Blazor/Pages/Doctor/PatientMetrics/PatientMetricsTemperatureDashboard.razor
+++ b/PatientAnalytics/Blazor/Pages/Doctor/PatientMetrics/PatientMetricsTemperatureDashboard.razor
@@ -1,5 +1,6 @@
 ﻿@page "/patients/{id:int}/temperature"
 @inject IStringLocalizer<Localized> Localized
+@using PatientAnalytics.Blazor.Controllers
 @using PatientAnalytics.Services.PatientMetrics
 @using PatientAnalytics.Models.PatientMetrics
 @inject PatientAnalyticsAuthStateProvider PatientAnalyticsAuthStateProvider
@@ -87,14 +88,9 @@
     }
 
     <HttpStatusExceptionIndicator Exception="@_exception" />
-</DoctorDashboardWrapper>
 
-<ConfirmationModal Title="@($"{Localized["Title_Delete_Patient"]} {Localized["Button_Temperature"]}")"
-                   ConfirmButtonText="@Localized["Button_Delete"]"
-                   CancelButtonText="@Localized["Button_Cancel"]"
-                   IsVisible="@_isDeleteConfirmationVisible"
-                   OnConfirm="ConfirmDelete"
-                   OnCancel="HideDeleteConfirmation" />
+    <ConfirmationModal Alert="_alertController.Alert" />
+</DoctorDashboardWrapper>
 
 @code {
     [Parameter]
@@ -106,8 +102,8 @@
     
     private bool _refreshing;
     private HttpStatusCodeException? _exception;
-    
-    private bool _isDeleteConfirmationVisible;
+
+    private readonly BlazorAlertController _alertController = new();
     private string ErrorMessage { get; set; } = string.Empty;
 
     private double? _temperatureValue;
@@ -180,12 +176,10 @@
     private void ShowDeleteConfirmation(int id)
     {
         _temperatureId = id;
-        _isDeleteConfirmationVisible = true;
-    }
-
-    private void HideDeleteConfirmation()
-    {
-        _isDeleteConfirmationVisible = false;
+        _alertController.OnDisplayAlert(
+            Localized,
+            "Title_DeleteRecord",
+            async () => await ConfirmDelete());
     }
 
     private async Task ConfirmDelete()
@@ -197,7 +191,7 @@
                 await PatientMetricsTemperatureService.DeleteEntryById(token, _temperatureId);
                 _patientsTemperature.RemoveAll(bp => bp.Id == _temperatureId);
                 
-                _isDeleteConfirmationVisible = false;
+                _alertController.RemovalModal();
             },
             refreshing => _refreshing = refreshing,
             exception => _exception = exception, 
