Blazor global import updates

--- a/PatientAnalytics/Blazor/Components/ConfirmationModal.razor
+++ b/PatientAnalytics/Blazor/Components/ConfirmationModal.razor
@@ -1,5 +1,4 @@
-﻿@using PatientAnalytics.Blazor.Models
-@inject IStringLocalizer<Localized> Localized
+﻿@inject IStringLocalizer<Localized> Localized
 
 @if (Alert is not null)
 {
