--- a/PatientAnalytics/Blazor/Components/Wrappers/PatientDashboardWrapper.razor
+++ b/PatientAnalytics/Blazor/Components/Wrappers/PatientDashboardWrapper.razor
@@ -1,5 +1,4 @@
-﻿@using PatientAnalytics.Services.PatientMetrics
-@inject IStringLocalizer<Localized> Localized
+﻿@inject IStringLocalizer<Localized> Localized
 @inject PatientAnalyticsAuthStateProvider PatientAnalyticsAuthStateProvider
 @inject NavigationManager NavigationManager
 @inject PatientMetricsBloodPressureService PatientMetricsBloodPressureService
