--- a/PatientAnalytics/Blazor/_Imports.razor
+++ b/PatientAnalytics/Blazor/_Imports.razor
@@ -1,7 +1,9 @@
 @using System.Net.Http
 @using System.Net.Http.Json
 @using System.Security.Claims
+@using Blazor.Controllers
 @using Blazor.Localization
+@using Blazor.Models
 @using Blazored.Toast
 @using Blazored.Toast.Configuration
 @using Blazored.Toast.Services
@@ -23,4 +25,6 @@
 @using PatientAnalytics.Middleware
 @using PatientAnalytics.Models
 @using PatientAnalytics.Models.Auth
+@using PatientAnalytics.Models.PatientMetrics
 @using PatientAnalytics.Services
+@using PatientAnalytics.Services.PatientMetrics
